# jeff

./: .gitignore  .gitmodules  BUNDLING.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  akiwake_menubar.cpp  akiwake_menubar.h  asw.cpp  asw.h  asw.pro  doxygen.conf  jeff-qt.pro  jeff-ui.cpp  jeff-ui.h  jeff.cpp  jeff.h  main.cpp  resources.qrc  tests.pro  tst_autotest.cpp  ui-resources.qrc
arts/: jeff.desktop
core/: basis.cpp  basis.h  container.h  containersstruct.h  core-methods.cpp  core-methods.h  core.cpp  core.h  handlers.cpp  handlers.h  history-processor.cpp  history-processor.h  history_processor.cpp  history_processor.h  jeff-core-kit.cpp  jeff-core-kit.h  local-server.cpp  local-server.h  message.h  nlp-module.cpp  nlp-module.h  nlp-structures.h  notify-client.cpp  notify-client.h  python-handler.cpp  python-handler.h  python-module.cpp  python-module.h  scenery.h  script-engine-module.cpp  script-engine-module.h  settings.cpp  settings.h  settingsstore.cpp  settingsstore.h  source.h  sqlite.cpp  sqlite.h  standard-templates.cpp  standard-templates.h  (+4 more)
core-kit/: basis.h  core.h  history-processor.h  jeff-core-kit.cpp  jeff-core-kit.h  local-server.h  notify-client.h  script-engine-module.cpp
dialogues/: about.cpp  about.h  add-script.cpp  add-script.h  akiwake_dialog.cpp  akiwake_dialog.h  containers.cpp  containers.h  createcontainer.cpp  createcontainer.h  expression-editor.cpp  expression-editor.h  firststart.cpp  firststart.h  help.cpp  help.h  modal-handler.h  phrase-editor.cpp  phrase-editor.h  scripts.cpp  scripts.h  settings.cpp  settings.h  sources.cpp  sources.h
doc/: DESIGN.md  SCRIPTS.md  arch.vym
extensions/: pycodestyle
jeff-api/: pyproject.toml
jeff-core/: API.md  Cargo.toml  README.md
jeff-core/example/: RocketExample.toml  example_conf.json
jeff-core/migration/: Cargo.toml
jeff-core/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230325_000001_create_tables.rs  m20230329_000001_create_tables.rs  m20232403_000002_add_hash.rs  m20232403_000003_add_login.rs  m20232403_000004_unique.rs
jeff-core/src/: common.rs  hyper_router.rs  logic.rs  main.rs  model.rs  psql.rs  sec.rs  setup.rs  types.rs
jeff-core/src/core_kit/: mod.rs  rocket_phrases.rs  rocket_users.rs  users.rs
jeff-core/src/entities/: mod.rs  phrase.rs  phrases.rs  prelude.rs  source.rs  user.rs  users.rs
jeff-core/src/model/: error_handler.rs  mod.rs  phrase.rs  serde_vec.rs  user.rs
jeff-desktop/: CMakeLists.txt  jeff-ui.hpp  jeff.hpp  main.cpp  trrel  trupd  ui-resources.qrc
jeff-qt/: CMakeLists.txt  jeff-ui.cpp  jeff-ui.h  jeff-ui.hpp  jeff.cpp  jeff.h  jeff.hpp  main.cpp  resources.qrc  ui-resources.qrc
jeff-qt/bundle/aiml-core/: jeff-aiml-daemon.py  server.py
jeff-qt/bundle/aiml-core/aiml/: Kernel.py
jeff-qt/core-kit/: basis.cpp  basis.h  basis.hpp  core.cpp  core.h  core.hpp  deploying-bundle.hpp  extensions-manager.cpp  extensions-manager.h  extensions-manager.hpp  history-processor.cpp  history-processor.h  history-processor.hpp  jeff-core-kit.cpp  jeff-core-kit.h  jeff-core-kit.hpp  local-server.cpp  local-server.hpp  notify-client.cpp  notify-client.h  notify-client.hpp  script-engine-module.cpp  script-engine-module.h  standard-templates.cpp  standard-templates.h  standard-templates.hpp
jeff-qt/core-kit/database/: json.cpp  json.h  json.hpp  sqlite.cpp  sqlite.h  sqlite.hpp
jeff-qt/core-kit/extensions/: daemon-process.cpp  daemon-process.h  daemon-process.hpp  extension.cpp  extension.h  extension.hpp  scenario.hpp  script.cpp  script.h  script.hpp
jeff-qt/core-kit/model/: keystore.hpp  message.h  message.hpp  phrase.h  phrase.hpp  source.hpp
jeff-qt/core-kit/model/nlp/: cache.h  cache.hpp  cacher.cpp  cacher.h  cacher.hpp  expression.h  expression.hpp  options.hpp  stringssearch.cpp  stringssearch.h  stringssearch.hpp
jeff-qt/core-kit/model/python/: daemon-process.cpp  daemon-process.h  object.hpp  script.cpp  script.h  worker.cpp  worker.h  worker.hpp
jeff-qt/dialogues/: about.cpp  about.h  add-script.cpp  add-script.h  add-script.hpp  dialog.h  extensions-viewer.cpp  extensions-viewer.h  extensions-viewer.hpp  firststart.cpp  firststart.h  firststart.hpp  help.cpp  help.h  help.hpp  modal-handler.h  modal-handler.hpp  phrase-editor.cpp  phrase-editor.h  phrase-editor.hpp  settings.cpp  settings.h  settings.hpp  sources-editor.cpp  sources-editor.h  sources-editor.hpp  sources.cpp
jeff-qt/dialogues/extensions-viewer/: brief.cpp  brief.h  brief.hpp  card.cpp  card.h  overview.cpp  overview.h  overview.hpp
jeff-qt/dialogues/phrase-editor/: brief.cpp  brief.h  brief.hpp  overview.cpp  overview.h  overview.hpp  scripteditor.cpp  scripteditor.hpp  selector.cpp  selector.h
jeff-qt/dialogues/sources-editor/: create-source.hpp
jeff-qt/examples/: transport.py
jeff-qt/examples/chatgpt-listener/: credentials-example.py
jeff-qt/examples/clock/: clock.py
jeff-qt/examples/darknet-image-recognition/: darknet-ir.py
jeff-qt/examples/vosk-voice-input/: voice-input.py
jeff-qt/l10n/: jeff_ru.qm  jeff_ru.ts  jeff_ua.qm  jeff_ua.ts
jeff-qt/widgets/: board.cpp  board.h  board.hpp  button.cpp  combobox.cpp  display.cpp  display.h  display.hpp  editlist.cpp  editlist.h  explanationlabel.cpp  line.cpp  line.h  lineedit.cpp  lineedit.h  lineedit.hpp  list.cpp  list.h  menu.cpp  menu.h  menubar.cpp  menubar.h  menubar.hpp  message.cpp  message.h  message.hpp  pairwidget.cpp  pairwidget.h  pairwidget.hpp  scripteditor.cpp  scripteditor.h  scripteditor.hpp  scrollarea.h  scrollarea.hpp  scrollfreezerwidget.hpp  spoiler.cpp  spoiler.h  styling.cpp  styling.h  textedit.cpp  (+2 more)
jeff-qt/widgets/layouts/: grid.h  linears.h
l10n/: asw_ru.qm  asw_ru.ts  jeff_ru.qm  jeff_ru.ts
packaging/: PKGBUILD  control
scripts/: konsole_exec.asw.py  konsole_exec.jeff.py
widgets/: a_board.cpp  a_board.h  a_button.cpp  a_button.h  a_containerslist.cpp  a_containerslist.h  a_display.cpp  a_display.h  a_explanationlabel.cpp  a_explanationlabel.h  a_expressionlist.cpp  a_expressionlist.h  a_line.cpp  a_line.h  a_lineedit.cpp  (+62 more)
(+193 files in other folders)
