[package]
name = "jeff-core"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
bb8 = "0.7"
bb8-postgres = "0.7"
custom_error = "1.9.2"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["runtime"] }
