[package]
name = "jeff-core"
version = "0.1.1"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
base64 = "0.21"
bb8-redis = "0.12"
chrono = { version = "0.4", features = ["serde"] }
passwords = "3.1"
rocket = {version = "0.5.0-rc.2", features = ["tls", "json", "secrets"]}
sea-orm = {version = "0.11", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "mock"]}
sea-orm-migration = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha3 = "0.10"
